# rspf

./: Cargo.toml  README.md
.cargo/: audit.toml
config/: rspf.toml.example
examples/daemontools/rspfd/: run
examples/daemontools/rspfd/log/: run
examples/postfix/: main.cf.snippet
rspf/: Cargo.toml
rspf/src/: engine.rs  lib.rs  logging.rs  mail_log.rs  server.rs  srs.rs
rspf/src/config/: load.rs  mod.rs  model.rs  policy.rs
rspf/src/net/: cidr_set.rs  mod.rs
rspf/src/proto/: codec.rs  mod.rs  request.rs  response.rs
rspf/src/spf/: evaluator.rs  header.rs  mock.rs  mod.rs  override_resolver.rs  resolver.rs
rspf/src/whitelist/: mod.rs
rspfd/: Cargo.toml
rspfd/src/: main.rs
