[package]
name = "rspfd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.4", features = ["derive"] }
rspf = { path = "../rspf" }
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = "0.7.19"
tracing = "0.1.44"
